@@ -19,6 +19,7 @@ Version 1.0rc to be released
 - Fixed issue #20: CBasePager throws undefined constant error (Qiang)
 - Fixed an issue that affects pager's parameter initialization order (Qiang)
 - Fixed a bug in determining FK relations in MySQL (Qiang)
+- Added CHtml::ajaxSubmitButton (Qiang)
 
 Version 1.0b October 24, 2008
 -----------------------------
